--- a/src/main/resources/application-hikari.properties
+++ b/src/main/resources/application-hikari.properties
@@ -42,3 +42,5 @@ spring.datasource.hikari.leak-detection-threshold=20000
 
 # Default idle timeout: 600000 (10 minutes)
 #spring.datasource.hikari.idle-timeout=60000
+
+#spring.datasource.hikari.auto-commit=false
