--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,6 @@
 spring.config.import=application-h2.properties, application-hikari.properties
 
 management.endpoints.web.exposure.include=*
+management.endpoint.metrics.enabled=true
+management.metrics.export.prometheus.enabled=true
 management.endpoints.web.base-path=/actuator
