--- a/src/main/resources/application-hikari.properties
+++ b/src/main/resources/application-hikari.properties
@@ -40,7 +40,17 @@ spring.datasource.hikari.leak-detection-threshold=20000
 # Default connection timeout: 30000 (30 seconds)
 #spring.datasource.hikari.connection-timeout=3000
 
+# Specifies the maximum amount of time (in milliseconds) that a connection can sit idle in the pool before it is eligible for removal.
 # Default idle timeout: 600000 (10 minutes)
 #spring.datasource.hikari.idle-timeout=60000
 
 #spring.datasource.hikari.auto-commit=false
+
+# The maxLifeTime is a configurable property that how long a connection is allowed to remain open before it?s automatically closed by HikariCP.
+# If a connection is actively in use by a client and exceeds the maxLifetime, HikariCP will not forcefully close it while it?s in use.
+# Instead, when the client releases the connection (e.g., by closing it or returning it to the pool), HikariCP will then detect that the connection
+# has exceeded its maxLifetime and close it before returning it to the pool.
+# Minimum: 30 seconds
+# Maximum: 2147483647 milliseconds (2,147,483.647 seconds or approximately 68 years)
+# Default: 1800000 milliseconds (30 minutes)
+#spring.datasource.hikari.maxLifeTime=1800000  # 30 minutes
