--- a/src/main/resources/application-hikari.properties
+++ b/src/main/resources/application-hikari.properties
@@ -8,11 +8,13 @@ spring.datasource.hikari.pool-name=hikari-cp-service-pool
 # You can turn on and off the mentioned logging at runtime with Spring Boot Actuator
 # curl -i -X POST http://$SERVER_HOST:$SERVER_PORT/actuator/loggers/com.zaxxer.hikari -H 'Content-Type: application/json' \
 #-d '{"configuredLevel": "TRACE"}'
+
+# These settings will enable DEBUG-level logging for the HikariConfig class and TRACE-level logging for the entire HikariCP library.
+# With this level of logging, you can gain insights into the connection pool initialization, configuration, and lifecycle events,
+# which can be invaluable for diagnosing issues or understanding the behavior of the connection pool.
 #logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
 #logging.level.com.zaxxer.hikari=TRACE
 
-# -------------------- Actuator --------------------
-# http://localhost:8080/actuator/metrics/hikaricp.connections.active
 
 # -------------------- Fixed Pool Size --------------------
 # Read this
