--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.config.import=application-h2.properties, application-hikari.properties
 
 management.endpoints.web.exposure.include=*
 management.endpoint.metrics.enabled=true
-management.metrics.export.prometheus.enabled=true
+
+management.prometheus.metrics.export.enabled=true
 management.endpoints.web.base-path=/actuator
